apps/base/nginx/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        app.kubernetes.io/name: nginx
    spec:
      containers:
        - name: nginx
          image: "public.ecr.aws/nginx/nginx:alpine-slim"
          volumeMounts:
            - name: nginx-keyvault-csi
              mountPath: "/mnt/secrets-store"
              readOnly: true
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "125m"
              memory: "128Mi"
      volumes:
        - name: nginx-keyvault-csi
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "nginx-keyvault-csi"
